--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 
 jar {
-  baseName = 'krishagni-importer'
+  baseName = 'krishagni-bulk-importer'
   version =  '4.0.0'
 }
 
@@ -60,6 +60,8 @@ dependencies {
   compile   "org.aspectj:aspectjrt:1.8.6"
   compile   "javax.persistence:persistence-api:1.0.2"
   aspects   "org.springframework:spring-aspects:3.2.13.RELEASE"
+
+  providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
 
   compile group: 'asm', name: 'asm', version:'3.3.1'
   compile group: 'org.aspectj', name: 'aspectjweaver', version:'1.8.6'
