--- a/build.gradle
+++ b/build.gradle
@@ -53,13 +53,13 @@ idea {
   } 
 }
 
-def springVersion = "4.3.3.RELEASE"
+def springVersion = "4.3.5.RELEASE"
 
 dependencies {
   ajc       "org.aspectj:aspectjtools:1.8.6"
   compile   "org.aspectj:aspectjrt:1.8.6"
   compile   "javax.persistence:persistence-api:1.0.2"
-  aspects   "org.springframework:spring-aspects:3.2.13.RELEASE"
+  aspects   "org.springframework:spring-aspects:4.3.5.RELEASE"
 
   providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
 
@@ -76,8 +76,8 @@ dependencies {
 
   compile group: 'org.apache.commons', name: 'commons-lang3', version:'3.4'
 
-  compile group: 'org.hibernate', name: 'hibernate-commons-annotations', version:'3.2.0.Final'
-  compile group: 'org.hibernate', name: 'hibernate-core', version:'4.2.18.Final'
+  compile group: 'org.hibernate.common', name: 'hibernate-commons-annotations', version:'5.0.1.Final'
+  compile group: 'org.hibernate', name: 'hibernate-core', version:'5.2.5.Final'
 
   compile group: 'org.springframework', name: 'spring-aop', version:springVersion
   compile group: 'org.springframework', name: 'spring-beans', version:springVersion
@@ -88,8 +88,8 @@ dependencies {
   compile group: 'org.springframework', name: 'spring-core', version:springVersion
   compile group: 'org.springframework.security', name: 'spring-security-core', version:'4.2.1.RELEASE'
 
-  compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.5.3'
-  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.5.3'
+  compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version:'2.8.5'
+  compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version:'2.8.5'
   compile group: 'com.thoughtworks.xstream', name: 'xstream', version:'1.4.8'
 
   compile group: 'com.krishagni', name: 'krishagni-commons', version:'4.0.0-SNAPSHOT'
